--- a/des157a/final/user-test/styles.css
+++ b/des157a/final/user-test/styles.css
@@ -29,21 +29,87 @@ body {
     min-height: 768px;
 }
 
+
 h1 {
     margin-top: 0;
 }
 
 button { 
     padding: 10px;
+    cursor: pointer;
 }
 
 main {
     position: relative;
+    margin: 0;
+    padding: 0;
 }
 
-.cols {
-    min-height: 768px;
+#aduio-area {
+    display: none;
 }
+
+/* User Testing */
+#user-test {
+    position: absolute;
+    z-index: 99999;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    padding: 5vh 30vw;
+    background-color: #00000079;
+}
+
+#user-test div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    padding: 5vh 8vh;
+    border-radius: 3vh;
+}
+
+#user-test div p {
+    line-height: 1.5em;
+}
+
+#user-test button {
+    margin: 0 10px;
+    padding: 10px 50px;
+    border: 2px solid black;
+    border-radius: 15px;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    transition: all 500ms ease-in-out;
+}
+
+#user-test button:hover, #user-test-button:hover {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+}
+
+#user-test-button {
+    margin: 0 10px;
+    padding: 15px 25px;
+    border: 2px solid black;
+    border-radius: 15px;
+    background-color: black;
+    color: white;
+    transition: all 500ms ease-in-out;
+    position: absolute;
+    transform: rotate(-90deg);
+    top: 10vh;
+    left: 20px;
+    z-index: 2000;
+}
+
 
 /* Game Intro */
 #game-intro {
@@ -135,8 +201,8 @@ main {
 
 #overlay-background{
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.35);
@@ -191,7 +257,7 @@ main {
 }
 
 #game-intro button:hover {
-    background-color: rgba(0, 0, 0, 0);
+    background-color: rgb(255, 255, 255);
     color: black;
 }
 
@@ -201,7 +267,7 @@ main {
 }
 
 #game-intro #gamerule-button:hover {
-    background-color: rgba(0, 0, 0, 0);
+    background-color: rgb(255, 255, 255);
     color: rgb(100, 100, 100);
 }
 
@@ -356,7 +422,7 @@ main {
 
 #progress .players-progress-area {
     position: relative;
-    min-height: 168px;
+    /* min-height: 150px; */
 }
 
 .players-icon {
@@ -375,8 +441,8 @@ main {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    height: 18vh;
-    min-height: 155px;
+    height: 16vh;
+    min-height: 145px;
     
 }
 
@@ -391,8 +457,8 @@ main {
 }
 
 #col-2 svg .circle-progress {
-    stroke-dasharray: 70;
-    stroke-dashoffset: 70;
+    stroke-dasharray: 58;
+    stroke-dashoffset: 58;
     z-index: 100;
 }
 
