--- a/des157a/final/styles.css
+++ b/des157a/final/styles.css
@@ -118,6 +118,10 @@ main {
     transition: all 500ms ease-in-out;
 }
 
+#gamerules-text {
+    margin-bottom: 10px;
+}
+
 #user-test button:hover, #user-test-button:hover, #gamerules button:hover, #gamerules-button:hover{
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
