--- a/des157b/studio1/style.css
+++ b/des157b/studio1/style.css
@@ -149,7 +149,7 @@ h2 {
     overflow: hidden;
     transition: 500ms ease-in-out;
     cursor: pointer;
-    border-right: 5px solid rgba(255, 255, 255, 0.2);
+    /* border-right: 5px solid rgba(255, 255, 255, 0.2); */
 }
 
 /************************** Video Area **************************/
