--- a/des157b/studio2/styles.css
+++ b/des157b/studio2/styles.css
@@ -148,7 +148,7 @@ footer a {
 }
 
 .colorbar {
-    background-color: tomato;
+    background-color: #7296a8;
     width: 10px;
     height: 6vh;
 }
